# soma

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
crates/soma-backend/: Cargo.toml
crates/soma-backend/src/: error.rs  lib.rs  local.rs
crates/soma-core/: Cargo.toml
crates/soma-core/src/: id.rs  index.rs  lib.rs  needle.rs
crates/soma-meta/: Cargo.toml
crates/soma-meta/src/: lib.rs  redb_store.rs  types.rs
crates/soma-meta/tests/: meta.rs
crates/soma-s3/: Cargo.toml
crates/soma-s3/src/: lib.rs  tests.rs
crates/soma-server/: Cargo.toml
crates/soma-server/src/: main.rs
deploy/compose/: docker-compose.erasure.yml  docker-compose.yml
deploy/examples/: compute-colocation.yaml
deploy/helm/soma/: Chart.yaml  values.yaml
deploy/helm/soma/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  gateway-configmap.yaml  gateway-deployment.yaml  gateway-service.yaml  meta-configmap.yaml  meta-service.yaml  meta-statefulset.yaml  secret.yaml  service.yaml  statefulset.yaml  storage-configmap.yaml  storage-service.yaml  storage-statefulset.yaml
docs/: ARCHITECTURE.md  CONDITIONAL_WRITES.md  DEPLOYMENT.md  LOCALITY_DESIGN.md  M1_DESIGN.md  M2_DESIGN.md  M3_DESIGN.md  M4_DESIGN.md  MVP_DESIGN.md  OBJECT_SIZING.md  STORAGE_MODEL.md  STREAMING_APPEND.md
soma-data/: meta.redb
src/backend/: Cargo.toml
src/backend/src/: cache.rs  encrypt.rs  error.rs  idxfile.rs  lib.rs  local.rs
src/backend/tests/: backend.rs
src/client/: Cargo.toml
src/client/src/: gateway.rs  lib.rs  sigv4.rs
src/client/tests/: client.rs
src/cluster/: Cargo.toml  build.rs
src/cluster/proto/: cluster.proto
src/cluster/src/: bridge.rs  controller.rs  ec.rs  erasure.rs  lib.rs  locality.rs  meta.rs  placement.rs  replicated.rs  ring.rs  storage.rs  wire.rs
src/core/: Cargo.toml
src/core/src/: error.rs  index.rs  lib.rs
src/localfd/: Cargo.toml
src/localfd/src/: client.rs  lib.rs  protocol.rs  server.rs
src/localfd/tests/: roundtrip.rs
src/meta/src/: error.rs  lib.rs  redb_store.rs  types.rs
src/meta/tests/: meta.rs
src/objectstore/: Cargo.toml  README.md
src/objectstore/src/: lib.rs
src/objectstore/tests/: store.rs
src/s3/: Cargo.toml
src/s3/src/: error.rs  lib.rs  qos.rs  service.rs  sigv4.rs  tests.rs  xml.rs
src/s3/tests/: integration.rs
src/server/: Cargo.toml
src/server/src/: admin.rs  config.rs  main.rs
