[workspace]
resolver = "3"
members = [
    "src/core",
    "src/meta",
    "src/backend",
    "src/s3",
    "src/server",
]
default-members = ["src/server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Zerry <zerix.os@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/kiwilab-cn/soma"
rust-version = "1.84"

# Robustness discipline shared by every crate: no silent panics on fallible paths.
[workspace.lints.rust]
unused_extern_crates = "warn"
unused_import_braces = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
# Internal crates (live under src/, kokedb-style)
soma-core = { path = "src/core" }
soma-meta = { path = "src/meta" }
soma-backend = { path = "src/backend" }
soma-s3 = { path = "src/s3" }

# Third-party
crc32c = "0.6"
thiserror = "2"
bytes = "1"
parking_lot = "0.12"
redb = "2"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
# S3 server stack
tokio = { version = "1", features = ["full"] }
axum = "0.8"
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
base64 = "0.22"
percent-encoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
bytesize = "1"
# Cache
foyer = "0.20"
# Test/utility
proptest = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Real S3 client used as an independent consumer in integration tests.
object_store = { version = "0.12", features = ["aws"] }
futures = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
