[package]
name = "soma-meta"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Metadata store: the authority for object name -> location + version (MetadataStore trait + redb impl)."

[dependencies]
soma-core = { workspace = true, features = ["serde"] }
redb.workspace = true
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
