[package]
name = "soma-s3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "S3 wire protocol and SigV4 authentication, mapping S3 operations onto the metadata store and storage backend."

[dependencies]
soma-core.workspace = true
soma-meta.workspace = true
soma-backend.workspace = true

[lints]
workspace = true
