[package]
name = "soma-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Storage backend: durable needle IO over volume files (StorageBackend trait + LocalFsBackend)."

[dependencies]
soma-core.workspace = true
crc32c.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
bytes.workspace = true
foyer.workspace = true
metrics.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
