[package]
name = "soma-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
soma-localfd.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
crc32c.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
soma-backend.workspace = true
soma-meta.workspace = true
soma-s3.workspace = true
tokio.workspace = true
axum.workspace = true
tempfile.workspace = true
