[package]
name = "soma-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core on-disk format (volume + needle), in-RAM hot index, and shared types for Soma."

[dependencies]
crc32c.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
# Derive serde on the public location types so higher layers (e.g. the metadata
# store) can persist them.
serde = ["dep:serde"]

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
