[package]
name = "soma-object-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
soma-client.workspace = true
soma-localfd.workspace = true
object_store.workspace = true
async-trait.workspace = true
bytes.workspace = true
memmap2.workspace = true
page_size.workspace = true
parking_lot.workspace = true
crc32c.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true

[dev-dependencies]
soma-backend.workspace = true
tempfile.workspace = true
