[package]
name = "soma-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Soma server binary: assembles the S3 protocol, metadata store, and storage backend into a running node."
default-run = "soma-server"

[[bin]]
name = "soma-server"
path = "src/main.rs"

[dependencies]
soma-core.workspace = true
soma-meta.workspace = true
soma-backend.workspace = true
soma-s3.workspace = true

tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
